[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["snOm3ad <geronimooliver00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = []
day_01 = []
day_02 = []
day_03 = []
day_04 = []

[dependencies]
